chenged link of navbar

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
           </div>
           <div class="">
             <ul>
-              <li><a href="https://thenextweb.com/latest"></a>LASTEST</li>
-              <li><a href="https://thenextweb.com/hardfork"></a>HARD FORK</li>
-              <li><a href="https://thenextweb.com/plugged"></a>PLUGGED</li>
-              <li><a href="https://thenextweb.com/the-next-police"></a>THE NEXT POLICE</li>
-              <li><a href="https://thenextweb.com/adobe-fundamentals"></a>FUNDAMENTALS</li>
-              <li><a href="https://thenextweb.com/iot-lab"></a>IOT LAB</li>
-              <li><a href="https://thenextweb.com/investing-2-0"></a>INVESTING 2.0</li>
+              <li><a href="https://thenextweb.com/latest">LASTEST</a></li>
+              <li><a href="https://thenextweb.com/hardfork">HARD FORK</a></li>
+              <li><a href="https://thenextweb.com/plugged">PLUGGED</a></li>
+              <li><a href="https://thenextweb.com/the-next-police">THE NEXT POLICE</a></li>
+              <li><a href="https://thenextweb.com/adobe-fundamentals">FUNDAMENTALS</a></li>
+              <li><a href="https://thenextweb.com/iot-lab">IOT LAB</a></li>
+              <li><a href="https://thenextweb.com/investing-2-0">INVESTING 2.0</a></li>
             </ul>
           </div>
         </div>
