--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/index.css">
@@ -9,7 +12,7 @@
   </head>
   <body>
     <header class="header-main">
-      <nav class="nav-content d-flex">
+      <nav class="nav-content d-flex topnav">
         <div class="nav-logo">
           <a href="https://thenextweb.com/"><img src="https://axerosolutions.com/attachment?file=C6KTEE9P2fZQ6dB0U3b73A==" alt="" class="nw-logo"></a>
         </div>
