--- a/index.html
+++ b/index.html
@@ -132,26 +132,31 @@
       </div>
     </main>
     <footer class="main-footer">
-      <div class="main-footer-f">
-        <ul class="w-full d-flex d-sp-bt footer-list-content">
-          <li class="footer-f-list"><a href="https://www.facebook.com/thenextweb" class="main-footer-link"><i class="fab fa-facebook-square"></i></a></li>
-          <li class="footer-f-list"><a href="https://twitter.com/thenextweb" class="main-footer-link"><i class="fab fa-twitter"></i></a></li>
-          <li class="footer-f-list"><a href="https://www.youtube.com/user/thenextweb" class="main-footer-link"><i class="fab fa-youtube"></i></a></li>
-          <li class="footer-f-list"><a href="https://www.instagram.com/thenextweb" class="main-footer-link"><i class="fab fa-instagram"></i></a></li>
-          <li class="footer-f-list"><a href="https://www.pinterest.com/thenextweb" class="main-footer-link"><i class="fab fa-pinterest-p"></i></a></li>
-          <li class="footer-f-list"><a href="https://thenextweb.com/feed/" class="main-footer-link"><i class="fas fa-rss-square"></i></a></li>
-          <li class="footer-f-list"><a href="https://thenextweb.com/#" class="main-footer-link"><i class="far fa-envelope"></i></a></li>
-        </ul>
+      <div class="footer-first">
+        <div class="main-footer-f">
+          <ul class="footer-list-content">
+            <li class="footer-f-list"><a href="https://www.facebook.com/thenextweb" class="main-footer-link"><i class="fab fa-facebook-square"></i></a></li>
+            <li class="footer-f-list"><a href="https://twitter.com/thenextweb" class="main-footer-link"><i class="fab fa-twitter"></i></a></li>
+            <li class="footer-f-list"><a href="https://www.youtube.com/user/thenextweb" class="main-footer-link"><i class="fab fa-youtube"></i></a></li>
+            <li class="footer-f-list"><a href="https://www.instagram.com/thenextweb" class="main-footer-link"><i class="fab fa-instagram"></i></a></li>
+            <li class="footer-f-list"><a href="https://www.pinterest.com/thenextweb" class="main-footer-link"><i class="fab fa-pinterest-p"></i></a></li>
+            <li class="footer-f-list"><a href="https://thenextweb.com/feed/" class="main-footer-link"><i class="fas fa-rss-square"></i></a></li>
+            <li class="footer-f-list"><a href="https://thenextweb.com/#" class="main-footer-link"><i class="far fa-envelope"></i></a></li>
+          </ul>
+        </div>
+        <div class="main-footer-s">
+          <ul class="footer-list-s-content">
+            <li class="footer-s-list"><a href="https://thenextweb.com/conference/" class="main-footer-link">EVENTS</a></li>
+            <li class="footer-s-list"><a href="https://thenextweb.com/about" class="main-footer-link">ABOUT</a></li>
+            <li class="footer-s-list"><a href="https://thenextweb.com/team" class="main-footer-link">TEAM</a></li>
+            <li class="footer-s-list"><a href="https://thenextweb.com/advertise" class="main-footer-link">ADVERTISE</a></li>
+            <li class="footer-s-list"><a href="https://thenextweb.homerun.hr/" class="main-footer-link">JOBS</a></li>
+            <li class="footer-s-list"><a href="https://thenextweb.com/about#contact" class="main-footer-link">CONTACT</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="main-footer-s">
-        <ul class="footer-list-s-content">
-          <li class="footer-s-list"><a href="https://thenextweb.com/conference/" class="main-footer-link">EVENTS</a></li>
-          <li class="footer-s-list"><a href="https://thenextweb.com/about" class="main-footer-link">ABOUT</a></li>
-          <li class="footer-s-list"><a href="https://thenextweb.com/team" class="main-footer-link">TEAM</a></li>
-          <li class="footer-s-list"><a href="https://thenextweb.com/advertise" class="main-footer-link">ADVERTISE</a></li>
-          <li class="footer-s-list"><a href="https://thenextweb.homerun.hr/" class="main-footer-link">JOBS</a></li>
-          <li class="footer-s-list"><a href="https://thenextweb.com/about#contact" class="main-footer-link">CONTACT</a></li>
-        </ul>
+      <div class="footer-second">
+        <p> <span>TNW</span> © 2006–2019 The Next Web B.V. Made with ♥ in Amsterdam. Powered by <span>StackPath</span></p>
       </div>
     </footer>
   </body>
