--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
     <footer class="main-footer">
       <div class="footer-first">
         <div class="main-footer-f">
-          <ul class="footer-list-content">
-            <li class="footer-f-list"><a href="https://www.facebook.com/thenextweb" class="main-footer-link"><i class="fab fa-facebook-square"></i></a></li>
+          <ul class="footer-list-f-content">
+            <li class="footer-f-list"><a href="https://www.facebook.com/thenextweb" class="main-footer-link"><i class="fab fa-facebook-square icon-footer"></i></a></li>
             <li class="footer-f-list"><a href="https://twitter.com/thenextweb" class="main-footer-link"><i class="fab fa-twitter"></i></a></li>
             <li class="footer-f-list"><a href="https://www.youtube.com/user/thenextweb" class="main-footer-link"><i class="fab fa-youtube"></i></a></li>
             <li class="footer-f-list"><a href="https://www.instagram.com/thenextweb" class="main-footer-link"><i class="fab fa-instagram"></i></a></li>
