--- a/index.html
+++ b/index.html
@@ -130,6 +130,38 @@
           </div>
       </div>
       </div>
+      <div class="">
+        <div class="">
+          <div class="">
+            <h1>Hard Fork ></h1>
+          </div>
+          <div class="">
+            <div class="">
+              <p>MOST POPULAR</p>
+              <h2>North Korean dissidents are using Ethereum to overthrow King Jong-un</h2>
+              <p>David Canellis - 1 hour ago</p>
+            </div>
+          </div>
+          <div class="">
+            <div class="">
+              <p>LASTEST</p>
+              <h2>We shouldn't care about companies accepting bitcoins on 2019</h2>
+            </div>
+            <div class="">
+              <img src="" alt="">
+            </div>
+          </div>
+          <div class="">
+            <ul>
+              <li>Malware rises from the dead to take vengance on cryptocurrency trading firms</li>
+              <li>Binances will let you buy Bitcoin with cash from 1.300 stores in Australia</li>
+              <li>Blackmailers are posing as CIA agents to steal your bitcoin</li>
+              <li>Nobody want Bitcoin ETF because cryptocurrency 'has an intrinsic value'</li>
+              <li>Japan tightens  grip on cryptocurrency margin trading</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="main-footer">
       <div class="footer-first">
