added second content

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
     <main class="w-full">
       <div class="main-top">
         <div class="item1">
-            <p class="w-full item-par">WORLD</p>
-            <h1 class="w-full item-h">Why can't facebook keep problematic <br>videos off its platform?</h1><br>
-            <p class="w-full item-par">by <a href="https://thenextweb.com/author/abhimanyughoshal/" class="item-link">Abhimanyu Ghoshal</a>  <i class="far fa-clock"></i> 24 minutes ago <i class="fas fa-share-alt-square"></i> 8</p>
+          <div class="item1-content">
+              <p class="w-full item-par">WORLD</p>
+              <h1 class="w-full item-h">Why can't facebook keep problematic <br>videos off its platform?</h1><br>
+              <p class="w-full item-par">by <a href="https://thenextweb.com/author/abhimanyughoshal/" class="item-link">Abhimanyu Ghoshal</a>  <i class="far fa-clock"></i> 24 minutes ago <i class="fas fa-share-alt-square"></i> 8</p>
+          </div>
         </div>
         <div class="item2 w-full-height">
           <div class="w-full item2-content">
@@ -130,37 +132,98 @@
           </div>
       </div>
       </div>
-      <div class="">
-        <div class="">
-          <div class="">
+      <div class="sec-body">
+        <div class="sec-item">
+          <div class="sec-item-head">
             <h1>Hard Fork ></h1>
           </div>
-          <div class="">
-            <div class="">
+          <div class="sec-body-content">
+            <div class="sec-body-content-element">
               <p>MOST POPULAR</p>
               <h2>North Korean dissidents are using Ethereum to overthrow King Jong-un</h2>
               <p>David Canellis - 1 hour ago</p>
             </div>
           </div>
-          <div class="">
-            <div class="">
+          <div class="sec-content-body">
+            <div class="sec-content-body-element">
               <p>LASTEST</p>
               <h2>We shouldn't care about companies accepting bitcoins on 2019</h2>
             </div>
-            <div class="">
-              <img src="" alt="">
+            <div class="sec-content-body-imgc">
+              <img src="https://cdn.shopify.com/s/files/1/1691/4145/products/CT000002805-MEN-TEE-BLK_800x.jpg?v=1524186418" alt="" class="sec-content-body-img">
             </div>
           </div>
-          <div class="">
-            <ul>
-              <li>Malware rises from the dead to take vengance on cryptocurrency trading firms</li>
-              <li>Binances will let you buy Bitcoin with cash from 1.300 stores in Australia</li>
-              <li>Blackmailers are posing as CIA agents to steal your bitcoin</li>
-              <li>Nobody want Bitcoin ETF because cryptocurrency 'has an intrinsic value'</li>
-              <li>Japan tightens  grip on cryptocurrency margin trading</li>
+          <div class="sec-body-list">
+            <ul class="sec-body-list-content">
+              <li class="sec-body-list-content-element">Malware rises from the dead to take vengance on cryptocurrency trading firms</li>
+              <li class="sec-body-list-content-element">Binances will let you buy Bitcoin with cash from 1.300 stores in Australia</li>
+              <li class="sec-body-list-content-element">Blackmailers are posing as CIA agents to steal your bitcoin</li>
+              <li class="sec-body-list-content-element">Nobody want Bitcoin ETF because cryptocurrency 'has an intrinsic value'</li>
+              <li class="sec-body-list-content-element">Japan tightens  grip on cryptocurrency margin trading</li>
             </ul>
           </div>
         </div>
+
+        <div class="sec-item">
+          <div class="sec-item-head">
+            <h1>Hard Fork ></h1>
+          </div>
+          <div class="sec-body-content">
+            <div class="sec-body-content-element">
+              <p>MOST POPULAR</p>
+              <h2>North Korean dissidents are using Ethereum to overthrow King Jong-un</h2>
+              <p>David Canellis - 1 hour ago</p>
+            </div>
+          </div>
+          <div class="sec-content-body">
+            <div class="sec-content-body-element">
+              <p>LASTEST</p>
+              <h2>We shouldn't care about companies accepting bitcoins on 2019</h2>
+            </div>
+            <div class="sec-content-body-imgc">
+              <img src="https://cdn.shopify.com/s/files/1/1691/4145/products/CT000002805-MEN-TEE-BLK_800x.jpg?v=1524186418" alt="" class="sec-content-body-img">
+            </div>
+          </div>
+          <div class="sec-body-list">
+            <ul class="sec-body-list-content">
+              <li class="sec-body-list-content-element">Malware rises from the dead to take vengance on cryptocurrency trading firms</li>
+              <li class="sec-body-list-content-element">Binances will let you buy Bitcoin with cash from 1.300 stores in Australia</li>
+              <li class="sec-body-list-content-element">Blackmailers are posing as CIA agents to steal your bitcoin</li>
+              <li class="sec-body-list-content-element">Nobody want Bitcoin ETF because cryptocurrency 'has an intrinsic value'</li>
+              <li class="sec-body-list-content-element">Japan tightens  grip on cryptocurrency margin trading</li>
+            </ul>
+          </div>
+        </div>
+        <div class="sec-item">
+            <div class="sec-item-head">
+              <h1>Hard Fork ></h1>
+            </div>
+            <div class="sec-body-content">
+              <div class="sec-body-content-element">
+                <p>MOST POPULAR</p>
+                <h2>North Korean dissidents are using Ethereum to overthrow King Jong-un</h2>
+                <p>David Canellis - 1 hour ago</p>
+              </div>
+            </div>
+            <div class="sec-content-body">
+              <div class="sec-content-body-element">
+                <p>LASTEST</p>
+                <h2>We shouldn't care about companies accepting bitcoins on 2019</h2>
+              </div>
+              <div class="sec-content-body-imgc">
+                <img src="https://cdn.shopify.com/s/files/1/1691/4145/products/CT000002805-MEN-TEE-BLK_800x.jpg?v=1524186418" alt="" class="sec-content-body-img">
+              </div>
+            </div>
+            <div class="sec-body-list">
+              <ul class="sec-body-list-content">
+                <li class="sec-body-list-content-element">Malware rises from the dead to take vengance on cryptocurrency trading firms</li>
+                <li class="sec-body-list-content-element">Binances will let you buy Bitcoin with cash from 1.300 stores in Australia</li>
+                <li class="sec-body-list-content-element">Blackmailers are posing as CIA agents to steal your bitcoin</li>
+                <li class="sec-body-list-content-element">Nobody want Bitcoin ETF because cryptocurrency 'has an intrinsic value'</li>
+                <li class="sec-body-list-content-element">Japan tightens  grip on cryptocurrency margin trading</li>
+              </ul>
+            </div>
+          </div>
       </div>
     </main>
     <footer class="main-footer">
