--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/index.css">
     <title>Responsive</title>
   </head>
@@ -135,7 +136,7 @@
       <div class="sec-body">
         <div class="sec-item">
           <div class="sec-item-head">
-            <h1>Hard Fork ></h1>
+            <h1 class="sec-item-head-h">Hard Fork ></h1>
           </div>
           <div class="sec-body-content">
             <div class="sec-body-content-element">
@@ -166,7 +167,7 @@
 
         <div class="sec-item">
           <div class="sec-item-head">
-            <h1>Hard Fork ></h1>
+            <h1 class="sec-item-head-h">Hard Fork ></h1>
           </div>
           <div class="sec-body-content">
             <div class="sec-body-content-element">
@@ -196,7 +197,7 @@
         </div>
         <div class="sec-item">
             <div class="sec-item-head">
-              <h1>Hard Fork ></h1>
+              <h1 class="sec-item-head-h">Hard Fork ></h1>
             </div>
             <div class="sec-body-content">
               <div class="sec-body-content-element">
@@ -241,17 +242,17 @@
         </div>
         <div class="main-footer-s">
           <ul class="footer-list-s-content">
-            <li class="footer-s-list"><a href="https://thenextweb.com/conference/" class="main-footer-link">EVENTS</a></li>
-            <li class="footer-s-list"><a href="https://thenextweb.com/about" class="main-footer-link">ABOUT</a></li>
-            <li class="footer-s-list"><a href="https://thenextweb.com/team" class="main-footer-link">TEAM</a></li>
-            <li class="footer-s-list"><a href="https://thenextweb.com/advertise" class="main-footer-link">ADVERTISE</a></li>
-            <li class="footer-s-list"><a href="https://thenextweb.homerun.hr/" class="main-footer-link">JOBS</a></li>
-            <li class="footer-s-list"><a href="https://thenextweb.com/about#contact" class="main-footer-link">CONTACT</a></li>
+            <li class="footer-s-list"><a href="https://thenextweb.com/conference/" class="main-footer-link-s">EVENTS</a></li>
+            <li class="footer-s-list"><a href="https://thenextweb.com/about" class="main-footer-link-s">ABOUT</a></li>
+            <li class="footer-s-list"><a href="https://thenextweb.com/team" class="main-footer-link-s">TEAM</a></li>
+            <li class="footer-s-list"><a href="https://thenextweb.com/advertise" class="main-footer-link-s">ADVERTISE</a></li>
+            <li class="footer-s-list"><a href="https://thenextweb.homerun.hr/" class="main-footer-link-s">JOBS</a></li>
+            <li class="footer-s-list"><a href="https://thenextweb.com/about#contact" class="main-footer-link-s">CONTACT</a></li>
           </ul>
         </div>
       </div>
       <div class="footer-second">
-        <p> <span>TNW</span> © 2006–2019 The Next Web B.V. Made with ♥ in Amsterdam. Powered by <span>StackPath</span></p>
+        <p> <strong>TNW</strong> © 2006–2019 The Next Web B.V. Made with <span>♥</span> in Amsterdam. Powered by <strong>StackPath</strong></p>
       </div>
     </footer>
   </body>
